# PDC_client

./: .gitignore  Dockerfile  README.md  build_docker  main.py  pyproject.toml  setup.py
PDC_client/: __init__.py  main.py
PDC_client/submodules/: api.py  io.py
src/: main.py
src/submodules/: api.py  io.py  logger.py
submodules/: __init__.py  io.py
test/: setup_tests.py  time_threads.py  time_threas.py  update_api_data.py
tests/: dummy_api.py  mock_graphql_server.py  setup_tests.py  test_api.py  test_dummy_api.py  test_io_functions.py  test_main_subcommands.py  test_mock_server.py  test_update_api_data.py  update_api_data.py
tests/data/api/: aliquots.json  cases.json  files.json  studies.json  study_catalog.json
tests/data/api/parsed/: aliquots.json  cases.json  files.json
tests/data/api/raw/: study_catalog.json
tests/resources/: __init__.py  setup_functions.py
tests/resources/data/: __init__.py  test_urls.json
tests/resources/data/api/: aliquots.json  cases.json  experiments.json  files.json  samples.json  studies.json  study_catalog.json
tests/resources/data/output/: PDC000504_flat.json  PDC000504_flat.tsv  PDC000504_skyline_annotations.csv
tests/resources/mock_graphql_server/: __init__.py  data.py  logger.py  models.py  schema.py  server.py
