[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'PDC_client'
authors=[{name='Aaron Maurais', email='maurais@uw.edu'}]
description = 'A CLI to interact with the NCI Proteomic Data Commons (PDC) API'
readme = 'README.md'
dynamic=['version']
dependencies = [
    'httpx>=0.28.1'
]
requires-python = '>=3.11'

[project.optional-dependencies]
test = [
    'Flask>=3.1.0',
    'graphene>=3.4.3',
    'graphql-core==3.2.5',
    'graphql-server==3.0.0b7'
]

[tool.setuptools]
packages = ['PDC_client', 'PDC_client.submodules']
package-dir = {'PDC_client' = 'src'}

[tools.setuptools.dynamic]
version = { attr = 'PDC_client.__version__' }

[project.scripts]
PDC_client = 'PDC_client.main:main'
